--- a/files/qredshift@quintao/po/sk.po
+++ b/files/qredshift@quintao/po/sk.po
@@ -1,122 +1,122 @@
-# SOME DESCRIPTIVE TITLE.
+# Slovak translation of Qredshift applet.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Dušan Kazik <prescott66@gmail.com>, 2023.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-30 00:45-0300\n"
-"PO-Revision-Date: 2022-11-26 18:37-0300\n"
-"Last-Translator: \n"
+"POT-Creation-Date: 2023-03-11 18:08+0100\n"
+"PO-Revision-Date: 2023-03-11 20:58+0100\n"
+"Last-Translator: Dušan Kazik <prescott66@gmail.com>\n"
 "Language-Team: \n"
-"Language: es\n"
+"Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.1.1\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n>=2 && n<=4 ? 1 : 2);\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: applet.js:232
 msgid "Reload Applet"
-msgstr "Recargar Applet"
+msgstr "Znovu načítať aplet"
 
 #: applet.js:243
 msgid "Recompile Translations"
-msgstr "Recompilar traducciones"
+msgstr "Prekompilovať preklady"
 
 #: applet.js:296
 msgid "REDSHIFT NOT INSTALLED!"
-msgstr "¡REDHISFT NO ESTÁ INSTALADO!"
+msgstr "PROGRAM REDSHIFT NIE JE NAINŠTALOVANÝ!"
 
 #: applet.js:297
 msgid "Requires Redshift: sudo apt-get install redshift"
-msgstr "Requiere Redshift: sudo apt-get install redshift"
+msgstr "Vyžaduje sa program Redshift: sudo apt-get install redshift"
 
-#: applet.js:446 applet.js:467
+#: applet.js:448 applet.js:469
 msgid "should be removed."
-msgstr "debe ser eliminado."
+msgstr "by mal byť odstránený."
 
 #. settings-schema.json->enabled->description
-#: applet.js:629
+#: applet.js:631
 msgid "Enabled"
-msgstr "Habilitado"
+msgstr "Povolené"
 
-#: applet.js:637 applet.js:682
+#: applet.js:639 applet.js:684
 msgid "Temp:"
-msgstr "Temperatura:"
+msgstr "Teplota:"
 
-#: applet.js:648 applet.js:693
+#: applet.js:650 applet.js:695
 msgid "Bright:"
-msgstr "Brillo:"
+msgstr "Jas:"
 
-#: applet.js:659 applet.js:975
+#: applet.js:661 applet.js:993
 msgid "Gamma:"
-msgstr "Gamma:"
+msgstr "Gama:"
 
 #. settings-schema.json->enabledNight->description
-#: applet.js:674
+#: applet.js:676
 msgid "Night Enabled"
-msgstr "Modo nocturno habilitado"
+msgstr "Nočný režim povolený"
 
 #. settings-schema.json->iconLabel->description
-#: applet.js:736
+#: applet.js:738
 msgid "Show Label"
-msgstr "Mostrar etiqueta"
+msgstr "Zobraziť menovku"
 
-#: applet.js:935 applet.js:958
+#: applet.js:951 applet.js:976
 msgid "Transition to day"
-msgstr "Transición al día"
+msgstr "Prechod na deň"
 
-#: applet.js:936 applet.js:959
+#: applet.js:952 applet.js:977
 msgid "Transition to night"
-msgstr "Transición a la noche"
+msgstr "Prechod na noc"
 
-#: applet.js:937 applet.js:960
+#: applet.js:953 applet.js:978
 msgid "Night"
-msgstr "Noche"
+msgstr "Noc"
 
-#: applet.js:938 applet.js:961
+#: applet.js:954 applet.js:979
 msgid "Day"
-msgstr "Día"
+msgstr "Deň"
 
-#: applet.js:949
+#: applet.js:968
 msgid "On"
-msgstr "Ecendido"
+msgstr "Zapnuté"
 
-#: applet.js:949 applet.js:951
+#: applet.js:968 applet.js:970
 msgid "Off"
-msgstr "Apagado"
+msgstr "Vypnuté"
 
-#: applet.js:966
+#: applet.js:984
 msgid "Day Temperature"
-msgstr "Temperatura diurna"
+msgstr "Teplota počas dňa"
 
-#: applet.js:967
+#: applet.js:985
 msgid "Day Brightness"
-msgstr "Brillo diurno"
+msgstr "Jas počas dňa"
 
-#: applet.js:969
+#: applet.js:987
 msgid "Night Temperature"
-msgstr "Temperatura nocturna"
+msgstr "Teplota počas noci"
 
-#: applet.js:970
+#: applet.js:988
 msgid "Night Brightness"
-msgstr "Brillo nocturno"
+msgstr "Jas počas noci"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->dayTemp->description
 #. settings-schema.json->nightTemp->description
-#: applet.js:972
+#: applet.js:990
 msgid "Temperature"
-msgstr "Temperatura"
+msgstr "Teplota"
 
 #. settings-schema.json->dayBrightness->description
 #. settings-schema.json->nightBrightness->description
-#: applet.js:973
+#: applet.js:991
 msgid "Brightness"
-msgstr "Brillo"
+msgstr "Jas"
 
 #. metadata.json->name
 msgid "QRedshift"
@@ -127,64 +127,64 @@ msgid ""
 "It makes the color of your computer's display adapt to the time of day, warm "
 "at night and like sunlight during the day."
 msgstr ""
-"Hace que el color de la pantalla del ordenador se adapte a la hora del día, "
-"cálido por la noche y luz del sol durante el día."
+"Zmení teplotu displeja vášho počítača podľa aktuálneho času, teplú v noci a "
+"chladnú počas dňa."
 
 #. settings-schema.json->panel-options->title
 msgid "Settings"
-msgstr "Configuración"
+msgstr "Nastavenia"
 
 #. settings-schema.json->panel-location->title
 msgid "Location"
-msgstr "Ubicación"
+msgstr "Umiestnenie"
 
 #. settings-schema.json->panel-shortcuts->title
 msgid "Shortcuts"
-msgstr "Atajos"
+msgstr "Klávesové skratky"
 
 #. settings-schema.json->info-section->title
 msgid "Tips"
-msgstr "Consejos"
+msgstr "Tipy"
 
 #. settings-schema.json->opt-section->title
 msgid "Options"
-msgstr "Opciones"
+msgstr "Voľby"
 
 #. settings-schema.json->day-section->title
 msgid "Day Settings"
-msgstr "Configuración diurna"
+msgstr "Denné nastavenia"
 
 #. settings-schema.json->night-section->title
 msgid "Night Settings"
-msgstr "Configuración nocturna"
+msgstr "Nočné nastavenia"
 
 #. settings-schema.json->keybind-section->title
 msgid "Key Bindings"
-msgstr "Atajos del teclado"
+msgstr "Priradenia kláves"
 
 #. settings-schema.json->location-section->title
 msgid "Location Settings"
-msgstr "Configuración de ubicación"
+msgstr "Nastavenia umiestnenia"
 
 #. settings-schema.json->autoUpdate->description
 msgid "Auto Update"
-msgstr "Actualización automática"
+msgstr "Automatická aktualizácia"
 
 #. settings-schema.json->autoUpdate->tooltip
 msgid "Continuously adjust color temperature"
-msgstr "Ajuste continuo de la temperatura del color"
+msgstr "Nepretržitá úprava teploty farieb"
 
 #. settings-schema.json->autoUpdateInterval->units
 msgid "Seconds"
-msgstr "Segundos"
+msgstr "Sekundy"
 
 #. settings-schema.json->autoUpdateInterval->description
 msgid "Update interval"
-msgstr "Intervalo de actualización"
+msgstr "Interval aktualizácie"
 
 #. settings-schema.json->adjustmentMethod->description
 msgid "Adjustment Method"
-msgstr "Método de Ajuste"
+msgstr "Spôsob úpravy"
 
 #. settings-schema.json->adjustmentMethod->options
 msgid "needload"
@@ -196,65 +196,65 @@ msgstr "randr"
 
 #. settings-schema.json->adjustmentMethod->options
 msgid "vidmode"
-msgstr "vimode"
+msgstr "vidmode"
 
 #. settings-schema.json->adjustmentMethod->tooltip
 msgid "Method to use to set color temperature"
-msgstr "Método para ajustar la temperatura del color"
+msgstr "Spôsob, ktorý sa má použiť na nastavenie teploty farieb"
 
 #. settings-schema.json->labelScrollAction->description
 msgid "Icon Scroll Action"
-msgstr "Acción del icono de desplazamiento"
+msgstr "Akcia pre rolovanie ikony"
 
 #. settings-schema.json->labelScrollAction->options
 msgid "Disabled"
-msgstr "Deshabilidato"
+msgstr "Zakázané"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->keyToggle->description
 msgid "On/Off"
-msgstr "Encendido/Apagado"
+msgstr "Zapnúť/Vypnúť"
 
 #. settings-schema.json->labelScrollAction->options
 msgid "Bright"
-msgstr "Brillo"
+msgstr "Jas"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->gammaMix->description
 msgid "Gamma"
-msgstr "Gamma"
+msgstr "Gama"
 
 #. settings-schema.json->labelScrollAction->tooltip
 msgid "Action when scroll on applet icon."
-msgstr "Acción al desplazarse sobre el icono del applet."
+msgstr "Akcia pri rolovaní na ikone apletu."
 
 #. settings-schema.json->symbolicIcon->description
 msgid "Use symbolic icon"
-msgstr "Usar iconos simbólicos"
+msgstr "Použiť symbolickú ikonu"
 
 #. settings-schema.json->keyBrightnessUp->description
 msgid "Increase brightness level"
-msgstr "Aumentar el nivel de brillo"
+msgstr "Zvýšenie úrovne jasu"
 
 #. settings-schema.json->keyBrightnessDown->description
 msgid "Decrease brightness level"
-msgstr "Disminuir el nivel de brillo"
+msgstr "Zníženie úrovne jasu"
 
 #. settings-schema.json->keyTempUp->description
 msgid "Increase temperature level"
-msgstr "Aumentar el nivel de temperatura"
+msgstr "Zvýšenie úrovne teploty"
 
 #. settings-schema.json->keyTempDown->description
 msgid "Decrease temperature level"
-msgstr "Disminuir el nivel de temperatura"
+msgstr "Zníženie úrovne teploty"
 
 #. settings-schema.json->keyGammaUp->description
 msgid "Increase gamma level"
-msgstr "Aumentar el nivel de gamma"
+msgstr "Zvýšenie úrovne gamy"
 
 #. settings-schema.json->keyGammaDown->description
 msgid "Decrease gamma level"
-msgstr "Disminuir el nivel de gamma"
+msgstr "Zníženie úrovne gamy"
 
 #. settings-schema.json->dayTemp->units
 #. settings-schema.json->nightTemp->units
@@ -268,62 +268,60 @@ msgstr "%"
 
 #. settings-schema.json->smoothTransition->description
 msgid "Smooth transition between day and night"
-msgstr "Transición suave entre el día y la noche"
+msgstr "Jemný prechod medzi dňom a nocou"
 
 #. settings-schema.json->transitionDuration->units
 msgid "Minutes"
-msgstr "Minutos"
+msgstr "Minúty"
 
 #. settings-schema.json->transitionDuration->description
 msgid "Transition Duration"
-msgstr "Duración de la transición"
+msgstr "Trvanie prechodu"
 
 #. settings-schema.json->manualNightTime->description
 msgid "Use Manual Night Time"
-msgstr "Usar horario nocturno manual"
+msgstr "Nastaviť nočný čas ručne"
 
 #. settings-schema.json->nightTimeStart->description
 msgid "Choose Start Time"
-msgstr "Seleccione hora de inicio"
+msgstr "Zvoľte čas začiatku"
 
 #. settings-schema.json->nightTimeEnd->description
 msgid "Choose End Time"
-msgstr "Seleccione hora de término"
+msgstr "Zvoľte čas ukončenia"
 
 #. settings-schema.json->locationRemote->description
 msgid "Remote Location"
-msgstr "Ubicación remota"
+msgstr "Vzdialené umiestnenie"
 
 #. settings-schema.json->locationRemote->tooltip
 #. settings-schema.json->locationUpdate->tooltip
 msgid "Native geoclue on redshift can make the experience slow."
-msgstr "Geoclue nativo en redshift puede hacer lenta su experiencia."
+msgstr ""
 
 #. settings-schema.json->locationUpdate->description
 msgid "Update Location"
-msgstr "Actualizar la ubicación"
+msgstr "Aktualizovať umiestnenie"
 
 #. settings-schema.json->locationLatitude->description
 msgid "Latitude"
-msgstr "Latitud"
+msgstr "Zemepisná šírka"
 
 #. settings-schema.json->locationLongitude->description
 msgid "Longitude"
-msgstr "Longitud"
+msgstr "Zemepisná dĺžka"
 
 #. settings-schema.json->aboutLocation->description
 msgid ""
 "Native geoclue on redshift can make the experience slow.\n"
 "Using: https://geolocation-db.com/"
 msgstr ""
-"Geoclue nativo en redshift puede hacer su experiencia lenta. \n"
-"Utilizando: https://geolocation-db.com/"
 
 #. settings-schema.json->textTips->description
 msgid "* Right-click the sliders to reset the default (neutral) value."
 msgstr ""
-"* Haga clic con el botón derecho en los controles deslizantes para "
-"restablecer el valor predeterminado (neutro)."
+"* Kliknutím pravým tlačidlom na posúvače obnovíte predvolené (neutrálne) "
+"hodnoty."
 
 #. settings-schema.json->textHelp->description
 msgid ""
@@ -331,16 +329,13 @@ msgid ""
 "deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
 "You will lost all your configs."
 msgstr ""
-"Cuando actualice a una nueva versión, asegúrese de restablecer la "
-"configuración por defecto borrando el archivo ~/.cinnamon/configs/"
-"qredshift@quintao/qredshift@quintao.json.\n"
-" Perderá todas sus configuraciones."
+"Po aktualizácii na novú verziu sa uistite, že ste obnovili konfigurácie na "
+"predvolené hodnoty, odstránením súboru ~/.cinnamon/configs/qredshift@quintao/"
+"qredshift@quintao.json.\n"
+"Stratíte všetky vaše konfigurácie."
 
 #. settings-schema.json->textInfo->description
 msgid ""
 "If you like and use this applet take the time to visit it's page on Cinnamon "
 "Spices and give it a star. You only need a github account to do this."
 msgstr ""
-"Si te gusta y usas este applet tómate el tiempo de visitar su página en "
-"Cinnamon Spices y dale una estrella. Sólo necesitas una cuenta de github "
-"para hacerlo."
