--- a/files/qredshift@quintao/po/zh_CN.po
+++ b/files/qredshift@quintao/po/zh_CN.po
@@ -1,122 +1,122 @@
-# SOME DESCRIPTIVE TITLE.
+# Simplified Chinese translation for qredshift@quintao.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Slinet6056 <slinet6056@gmail.com>, 2023.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-08-30 00:45-0300\n"
-"PO-Revision-Date: 2022-11-26 18:37-0300\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2023-02-05 17:18+0800\n"
+"Last-Translator: Slinet6056 <slinet6056@gmail.com>\n"
 "Language-Team: \n"
-"Language: es\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.1.1\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: applet.js:232
 msgid "Reload Applet"
-msgstr "Recargar Applet"
+msgstr "重新加载小程序"
 
 #: applet.js:243
 msgid "Recompile Translations"
-msgstr "Recompilar traducciones"
+msgstr "重新编译翻译"
 
 #: applet.js:296
 msgid "REDSHIFT NOT INSTALLED!"
-msgstr "¡REDHISFT NO ESTÁ INSTALADO!"
+msgstr "没有安装红移！"
 
 #: applet.js:297
 msgid "Requires Redshift: sudo apt-get install redshift"
-msgstr "Requiere Redshift: sudo apt-get install redshift"
+msgstr "需要安装红移：sudo apt-get install redshift"
 
 #: applet.js:446 applet.js:467
 msgid "should be removed."
-msgstr "debe ser eliminado."
+msgstr "需要被删除。"
 
 #. settings-schema.json->enabled->description
 #: applet.js:629
 msgid "Enabled"
-msgstr "Habilitado"
+msgstr "启用"
 
 #: applet.js:637 applet.js:682
 msgid "Temp:"
-msgstr "Temperatura:"
+msgstr "色温："
 
 #: applet.js:648 applet.js:693
 msgid "Bright:"
-msgstr "Brillo:"
+msgstr "亮度："
 
 #: applet.js:659 applet.js:975
 msgid "Gamma:"
-msgstr "Gamma:"
+msgstr "伽玛："
 
 #. settings-schema.json->enabledNight->description
 #: applet.js:674
 msgid "Night Enabled"
-msgstr "Modo nocturno habilitado"
+msgstr "启用夜间模式"
 
 #. settings-schema.json->iconLabel->description
 #: applet.js:736
 msgid "Show Label"
-msgstr "Mostrar etiqueta"
+msgstr "显示标签"
 
 #: applet.js:935 applet.js:958
 msgid "Transition to day"
-msgstr "Transición al día"
+msgstr "过渡到日间模式"
 
 #: applet.js:936 applet.js:959
 msgid "Transition to night"
-msgstr "Transición a la noche"
+msgstr "过渡到夜间模式"
 
 #: applet.js:937 applet.js:960
 msgid "Night"
-msgstr "Noche"
+msgstr "夜间模式"
 
 #: applet.js:938 applet.js:961
 msgid "Day"
-msgstr "Día"
+msgstr "日间模式"
 
 #: applet.js:949
 msgid "On"
-msgstr "Ecendido"
+msgstr "开启"
 
 #: applet.js:949 applet.js:951
 msgid "Off"
-msgstr "Apagado"
+msgstr "关闭"
 
 #: applet.js:966
 msgid "Day Temperature"
-msgstr "Temperatura diurna"
+msgstr "日间色温"
 
 #: applet.js:967
 msgid "Day Brightness"
-msgstr "Brillo diurno"
+msgstr "日间亮度"
 
 #: applet.js:969
 msgid "Night Temperature"
-msgstr "Temperatura nocturna"
+msgstr "夜间色温"
 
 #: applet.js:970
 msgid "Night Brightness"
-msgstr "Brillo nocturno"
+msgstr "夜间亮度"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->dayTemp->description
 #. settings-schema.json->nightTemp->description
 #: applet.js:972
 msgid "Temperature"
-msgstr "Temperatura"
+msgstr "色温"
 
 #. settings-schema.json->dayBrightness->description
 #. settings-schema.json->nightBrightness->description
 #: applet.js:973
 msgid "Brightness"
-msgstr "Brillo"
+msgstr "亮度"
 
 #. metadata.json->name
 msgid "QRedshift"
@@ -126,65 +126,63 @@ msgstr "QRedshift"
 msgid ""
 "It makes the color of your computer's display adapt to the time of day, warm "
 "at night and like sunlight during the day."
-msgstr ""
-"Hace que el color de la pantalla del ordenador se adapte a la hora del día, "
-"cálido por la noche y luz del sol durante el día."
+msgstr "它使您电脑显示屏的颜色适应一天中的时间，晚上是暖色调，白天则像阳光。"
 
 #. settings-schema.json->panel-options->title
 msgid "Settings"
-msgstr "Configuración"
+msgstr "设置"
 
 #. settings-schema.json->panel-location->title
 msgid "Location"
-msgstr "Ubicación"
+msgstr "位置"
 
 #. settings-schema.json->panel-shortcuts->title
 msgid "Shortcuts"
-msgstr "Atajos"
+msgstr "快捷键"
 
 #. settings-schema.json->info-section->title
 msgid "Tips"
-msgstr "Consejos"
+msgstr "提示"
 
 #. settings-schema.json->opt-section->title
 msgid "Options"
-msgstr "Opciones"
+msgstr "选项"
 
 #. settings-schema.json->day-section->title
 msgid "Day Settings"
-msgstr "Configuración diurna"
+msgstr "日间模式设置"
 
 #. settings-schema.json->night-section->title
 msgid "Night Settings"
-msgstr "Configuración nocturna"
+msgstr "夜间模式设置"
 
 #. settings-schema.json->keybind-section->title
 msgid "Key Bindings"
-msgstr "Atajos del teclado"
+msgstr "按键绑定"
 
 #. settings-schema.json->location-section->title
 msgid "Location Settings"
-msgstr "Configuración de ubicación"
+msgstr "位置设置"
 
 #. settings-schema.json->autoUpdate->description
 msgid "Auto Update"
-msgstr "Actualización automática"
+msgstr "自动更新"
 
 #. settings-schema.json->autoUpdate->tooltip
 msgid "Continuously adjust color temperature"
-msgstr "Ajuste continuo de la temperatura del color"
+msgstr "连续调整色温"
 
 #. settings-schema.json->autoUpdateInterval->units
 msgid "Seconds"
-msgstr "Segundos"
+msgstr "秒"
 
 #. settings-schema.json->autoUpdateInterval->description
 msgid "Update interval"
-msgstr "Intervalo de actualización"
+msgstr "更新间隔"
 
 #. settings-schema.json->adjustmentMethod->description
 msgid "Adjustment Method"
-msgstr "Método de Ajuste"
+msgstr "色温调整方法"
 
 #. settings-schema.json->adjustmentMethod->options
 msgid "needload"
@@ -196,65 +194,65 @@ msgstr "randr"
 
 #. settings-schema.json->adjustmentMethod->options
 msgid "vidmode"
-msgstr "vimode"
+msgstr "vidmode"
 
 #. settings-schema.json->adjustmentMethod->tooltip
 msgid "Method to use to set color temperature"
-msgstr "Método para ajustar la temperatura del color"
+msgstr "用于设置色温的方法"
 
 #. settings-schema.json->labelScrollAction->description
 msgid "Icon Scroll Action"
-msgstr "Acción del icono de desplazamiento"
+msgstr "图标滚动动作"
 
 #. settings-schema.json->labelScrollAction->options
 msgid "Disabled"
-msgstr "Deshabilidato"
+msgstr "禁用"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->keyToggle->description
 msgid "On/Off"
-msgstr "Encendido/Apagado"
+msgstr "开/关"
 
 #. settings-schema.json->labelScrollAction->options
 msgid "Bright"
-msgstr "Brillo"
+msgstr "亮度"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->gammaMix->description
 msgid "Gamma"
-msgstr "Gamma"
+msgstr "伽马"
 
 #. settings-schema.json->labelScrollAction->tooltip
 msgid "Action when scroll on applet icon."
-msgstr "Acción al desplazarse sobre el icono del applet."
+msgstr "在小程序图标上滚动鼠标滚轮时的动作。"
 
 #. settings-schema.json->symbolicIcon->description
 msgid "Use symbolic icon"
-msgstr "Usar iconos simbólicos"
+msgstr "使用符号图标"
 
 #. settings-schema.json->keyBrightnessUp->description
 msgid "Increase brightness level"
-msgstr "Aumentar el nivel de brillo"
+msgstr "提高亮度"
 
 #. settings-schema.json->keyBrightnessDown->description
 msgid "Decrease brightness level"
-msgstr "Disminuir el nivel de brillo"
+msgstr "降低亮度"
 
 #. settings-schema.json->keyTempUp->description
 msgid "Increase temperature level"
-msgstr "Aumentar el nivel de temperatura"
+msgstr "提高色温"
 
 #. settings-schema.json->keyTempDown->description
 msgid "Decrease temperature level"
-msgstr "Disminuir el nivel de temperatura"
+msgstr "降低色温"
 
 #. settings-schema.json->keyGammaUp->description
 msgid "Increase gamma level"
-msgstr "Aumentar el nivel de gamma"
+msgstr "提高伽马值"
 
 #. settings-schema.json->keyGammaDown->description
 msgid "Decrease gamma level"
-msgstr "Disminuir el nivel de gamma"
+msgstr "降低伽马值"
 
 #. settings-schema.json->dayTemp->units
 #. settings-schema.json->nightTemp->units
@@ -268,62 +266,60 @@ msgstr "%"
 
 #. settings-schema.json->smoothTransition->description
 msgid "Smooth transition between day and night"
-msgstr "Transición suave entre el día y la noche"
+msgstr "在日间模式和夜间模式之间平滑过渡"
 
 #. settings-schema.json->transitionDuration->units
 msgid "Minutes"
-msgstr "Minutos"
+msgstr "分钟"
 
 #. settings-schema.json->transitionDuration->description
 msgid "Transition Duration"
-msgstr "Duración de la transición"
+msgstr "过渡时间"
 
 #. settings-schema.json->manualNightTime->description
 msgid "Use Manual Night Time"
-msgstr "Usar horario nocturno manual"
+msgstr "使用自定夜间模式时间"
 
 #. settings-schema.json->nightTimeStart->description
 msgid "Choose Start Time"
-msgstr "Seleccione hora de inicio"
+msgstr "选择开始时间"
 
 #. settings-schema.json->nightTimeEnd->description
 msgid "Choose End Time"
-msgstr "Seleccione hora de término"
+msgstr "选择结束时间"
 
 #. settings-schema.json->locationRemote->description
 msgid "Remote Location"
-msgstr "Ubicación remota"
+msgstr "远程位置"
 
 #. settings-schema.json->locationRemote->tooltip
 #. settings-schema.json->locationUpdate->tooltip
 msgid "Native geoclue on redshift can make the experience slow."
-msgstr "Geoclue nativo en redshift puede hacer lenta su experiencia."
+msgstr "红移上的原生 geoclue 服务会使小程序变得缓慢。"
 
 #. settings-schema.json->locationUpdate->description
 msgid "Update Location"
-msgstr "Actualizar la ubicación"
+msgstr "更新位置"
 
 #. settings-schema.json->locationLatitude->description
 msgid "Latitude"
-msgstr "Latitud"
+msgstr "纬度"
 
 #. settings-schema.json->locationLongitude->description
 msgid "Longitude"
-msgstr "Longitud"
+msgstr "经度"
 
 #. settings-schema.json->aboutLocation->description
 msgid ""
 "Native geoclue on redshift can make the experience slow.\n"
 "Using: https://geolocation-db.com/"
 msgstr ""
-"Geoclue nativo en redshift puede hacer su experiencia lenta. \n"
-"Utilizando: https://geolocation-db.com/"
+"红移上的原生 geoclue 服务会使小程序变得缓慢。\n"
+"使用：https://geolocation-db.com/"
 
 #. settings-schema.json->textTips->description
 msgid "* Right-click the sliders to reset the default (neutral) value."
-msgstr ""
-"* Haga clic con el botón derecho en los controles deslizantes para "
-"restablecer el valor predeterminado (neutro)."
+msgstr "* 右键单击滑块以重置默认 (中性) 值。"
 
 #. settings-schema.json->textHelp->description
 msgid ""
@@ -331,16 +327,14 @@ msgid ""
 "deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
 "You will lost all your configs."
 msgstr ""
-"Cuando actualice a una nueva versión, asegúrese de restablecer la "
-"configuración por defecto borrando el archivo ~/.cinnamon/configs/"
-"qredshift@quintao/qredshift@quintao.json.\n"
-" Perderá todas sus configuraciones."
+"当更新到一个新的版本时，确保通过删除 ~/.cinnamon/configs/qredshift@quintao/"
+"qredshift@quintao.json，将配置重置为默认值。\n"
+"您将失去所有的配置。"
 
 #. settings-schema.json->textInfo->description
 msgid ""
 "If you like and use this applet take the time to visit it's page on Cinnamon "
 "Spices and give it a star. You only need a github account to do this."
 msgstr ""
-"Si te gusta y usas este applet tómate el tiempo de visitar su página en "
-"Cinnamon Spices y dale una estrella. Sólo necesitas una cuenta de github "
-"para hacerlo."
+"如果您使用并喜欢这个小程序，请花费一点时间访问它在 Cinnamon Spices 上的页面并"
+"给它一颗星，您只需要一个 GitHub 账户就可以做到这一点。"
