--- a/files/qredshift@quintao/po/pt_BR.po
+++ b/files/qredshift@quintao/po/pt_BR.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: qredshift@quintao\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-30 00:45-0300\n"
-"PO-Revision-Date: 2022-08-31 02:54-0300\n"
+"POT-Creation-Date: 2024-07-05 06:22-0300\n"
+"PO-Revision-Date: 2024-07-05 06:28-0300\n"
 "Last-Translator: Raphael Quintao <raphaelquintao@gmail.com>\n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -16,105 +16,197 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 3.1.1\n"
+"X-Generator: Poedit 3.4.4\n"
 
-#: applet.js:232
+#: applet.js:293
 msgid "Reload Applet"
 msgstr "Reiniciar o applet"
 
-#: applet.js:243
+#: applet.js:299
+msgid "Generate .POT file"
+msgstr ""
+
+#: applet.js:304
 msgid "Recompile Translations"
 msgstr "Recompilar as traduções"
 
-#: applet.js:296
-msgid "REDSHIFT NOT INSTALLED!"
-msgstr "REDSHIFT NÃO ESTÁ INSTALADO!"
+#: applet.js:363 applet.js:364
+msgid "Something went wrong!"
+msgstr "Alguma coisa errada aconteceu!"
 
-#: applet.js:297
-msgid "Requires Redshift: sudo apt-get install redshift"
-msgstr "É necessário instalar o Redshift: sudo apt-get install redshift"
+#: applet.js:409 applet.js:415
+msgid "New Version Available"
+msgstr "Nova Versão Disponível"
 
-#: applet.js:446 applet.js:467
-msgid "should be removed."
-msgstr "deve ser removido."
+#: applet.js:416 applet.js:419
+msgid "Click to Update"
+msgstr "Clique para Atualizar"
+
+#: applet.js:430
+msgid "You are running the latest version."
+msgstr "Você está executando a versão mais recente."
+
+#: applet.js:436
+msgid "Failed to check updates"
+msgstr "Falha ao verificar atualizações"
+
+#: applet.js:436
+msgid "Api Limit Exceeded"
+msgstr "Limite de API excedido"
+
+#: applet.js:453
+msgid "Updating! Your system may freeze for a few seconds."
+msgstr "Atualizando! Seu sistema pode travar por alguns segundos."
+
+#: applet.js:454
+msgid "Downloading files..."
+msgstr "Baixando arquivos..."
+
+#: applet.js:458
+msgid "Installing..."
+msgstr "Instalando..."
+
+#: applet.js:464
+msgid "Reloading Applet..."
+msgstr "Recarregando o applet..."
+
+#: applet.js:466
+msgid "Updated successfully"
+msgstr "Atualizado com Sucesso"
+
+#: applet.js:466
+msgid "Version installed"
+msgstr "Versão instalada"
+
+#: applet.js:471 applet.js:476
+msgid "Update failed"
+msgstr "Falha ao atualizar"
+
+#: applet.js:480
+msgid "Failed to download update!"
+msgstr "Falha ao baixar atualização!"
+
+#: applet.js:617
+msgid "package can be removed."
+msgstr "pacote pode ser removido."
+
+#: applet.js:620
+msgid "Old Redshift package is no longer required and can be safely removed."
+msgstr "O pacote antigo do Redshift não é mais necessário e pode ser removido."
+
+#: applet.js:639 applet.js:643
+msgid "Not supported on wayland!"
+msgstr "Não suportado no Wayland!"
+
+#: applet.js:646
+msgid ""
+"Automatically disabled under Wayland due to cinnamon compositor not yet "
+"support gamma ramps change."
+msgstr ""
+"Desativado automaticamente no Wayland devido ao compositor do Cinnamon ainda "
+"não suportar alteração de rampas de gama."
+
+#: applet.js:652 applet.js:658
+msgid "Unsupported architecture"
+msgstr "Arquitetura não suportada"
+
+#: applet.js:661
+msgid "Unsupported architecture, click here to report."
+msgstr "Arquitetura não suportada, clique para reportar."
+
+#: applet.js:703
+msgid "Error searching for your location"
+msgstr "Erro ao buscar sua localização"
+
+#. settings-schema.json->nightTimeStart->description
+#: applet.js:848
+msgid "Sunset"
+msgstr "Por do sol"
+
+#. settings-schema.json->nightTimeEnd->description
+#: applet.js:849
+msgid "Sunrise"
+msgstr "Nascer do sol"
 
 #. settings-schema.json->enabled->description
-#: applet.js:629
+#: applet.js:863
 msgid "Enabled"
 msgstr "Ativado"
 
-#: applet.js:637 applet.js:682
+#: applet.js:871 applet.js:916
 msgid "Temp:"
 msgstr "Temp.:"
 
-#: applet.js:648 applet.js:693
+#: applet.js:882 applet.js:927
 msgid "Bright:"
 msgstr "Brilho:"
 
-#: applet.js:659 applet.js:975
+#: applet.js:893 applet.js:1217
 msgid "Gamma:"
 msgstr "Gama:"
 
 #. settings-schema.json->enabledNight->description
-#: applet.js:674
+#: applet.js:908
 msgid "Night Enabled"
 msgstr "Modo noturno"
 
 #. settings-schema.json->iconLabel->description
-#: applet.js:736
+#: applet.js:972
 msgid "Show Label"
 msgstr "Mostrar rótulo"
 
-#: applet.js:935 applet.js:958
+#: applet.js:1167 applet.js:1193
 msgid "Transition to day"
 msgstr "Transição para dia"
 
-#: applet.js:936 applet.js:959
+#: applet.js:1168 applet.js:1194
 msgid "Transition to night"
 msgstr "Transição para noite"
 
-#: applet.js:937 applet.js:960
+#: applet.js:1169 applet.js:1195
 msgid "Night"
 msgstr "Noite"
 
-#: applet.js:938 applet.js:961
+#: applet.js:1170 applet.js:1196
 msgid "Day"
 msgstr "Dia"
 
-#: applet.js:949
+#: applet.js:1186
 msgid "On"
 msgstr "Ligado"
 
-#: applet.js:949 applet.js:951
+#: applet.js:1186 applet.js:1187
 msgid "Off"
 msgstr "Desligado"
 
-#: applet.js:966
+#: applet.js:1208
 msgid "Day Temperature"
 msgstr "Temperatura durante o dia"
 
-#: applet.js:967
+#: applet.js:1209
 msgid "Day Brightness"
 msgstr "Brilho durante o dia"
 
-#: applet.js:969
+#: applet.js:1211
 msgid "Night Temperature"
 msgstr "Temperatura durante a noite"
 
-#: applet.js:970
+#: applet.js:1212
 msgid "Night Brightness"
 msgstr "Brilho durante a noite"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->dayTemp->description
 #. settings-schema.json->nightTemp->description
-#: applet.js:972
+#. settings-schema.json->stepTemp->description
+#: applet.js:1214
 msgid "Temperature"
 msgstr "Temperatura"
 
 #. settings-schema.json->dayBrightness->description
 #. settings-schema.json->nightBrightness->description
-#: applet.js:973
+#. settings-schema.json->stepBright->description
+#: applet.js:1215
 msgid "Brightness"
 msgstr "Brilho"
 
@@ -130,9 +222,13 @@ msgstr ""
 "Faz com que a cor da tela do seu computador se adapte à hora do dia, quente "
 "durante a noite e como a luz do sol durante o dia."
 
-#. settings-schema.json->panel-options->title
-msgid "Settings"
-msgstr "Configurações"
+#. settings-schema.json->panel-general->title
+msgid "General"
+msgstr "Geral"
+
+#. settings-schema.json->panel-temperature->title
+msgid "Temperatures"
+msgstr "Temperaturas"
 
 #. settings-schema.json->panel-location->title
 msgid "Location"
@@ -142,13 +238,17 @@ msgstr "Localização"
 msgid "Shortcuts"
 msgstr "Atalhos"
 
-#. settings-schema.json->info-section->title
-msgid "Tips"
-msgstr "Dicas"
+#. settings-schema.json->panel-help->title
+msgid "Help"
+msgstr "Ajuda"
 
-#. settings-schema.json->opt-section->title
+#. settings-schema.json->section-options->title
 msgid "Options"
 msgstr "Opções"
+
+#. settings-schema.json->section-behavior->title
+msgid "Behavior"
+msgstr "Comportamento"
 
 #. settings-schema.json->day-section->title
 msgid "Day Settings"
@@ -162,9 +262,35 @@ msgstr "Opções para a noite"
 msgid "Key Bindings"
 msgstr "Atalhos de teclado"
 
+#. settings-schema.json->step-section->title
+msgid "Step"
+msgstr "Passos"
+
 #. settings-schema.json->location-section->title
 msgid "Location Settings"
-msgstr "Opções de localização"
+msgstr "Opções de Localização"
+
+#. settings-schema.json->section-tips->title
+msgid "Tips"
+msgstr "Dicas"
+
+#. settings-schema.json->section-project->title
+msgid "More about QRedshift"
+msgstr "Mais sobre QRedshift"
+
+#. settings-schema.json->section-update->title
+msgid "Update"
+msgstr "Atualizar"
+
+#. settings-schema.json->section-debug->title
+#. settings-schema.json->debugToggle->description
+msgid "Debug"
+msgstr "Debug"
+
+#. settings-schema.json->enableAtStartup->description
+#. settings-schema.json->enableAtStartup->tooltip
+msgid "Reactivate QRedshift as soon as Cinnamon starts up"
+msgstr "Reative o QRedshift assim que o Cinnamon iniciar"
 
 #. settings-schema.json->autoUpdate->description
 msgid "Auto Update"
@@ -181,26 +307,6 @@ msgstr "Segundos"
 #. settings-schema.json->autoUpdateInterval->description
 msgid "Update interval"
 msgstr "Intervalo de atualização"
-
-#. settings-schema.json->adjustmentMethod->description
-msgid "Adjustment Method"
-msgstr "Método de ajuste"
-
-#. settings-schema.json->adjustmentMethod->options
-msgid "needload"
-msgstr "needload"
-
-#. settings-schema.json->adjustmentMethod->options
-msgid "randr"
-msgstr "randr"
-
-#. settings-schema.json->adjustmentMethod->options
-msgid "vidmode"
-msgstr "vidmode"
-
-#. settings-schema.json->adjustmentMethod->tooltip
-msgid "Method to use to set color temperature"
-msgstr "Método usado para ajustar a temperatura da cor"
 
 #. settings-schema.json->labelScrollAction->description
 msgid "Icon Scroll Action"
@@ -221,6 +327,7 @@ msgstr "Brilho"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->gammaMix->description
+#. settings-schema.json->stepGamma->description
 msgid "Gamma"
 msgstr "Gama de cores"
 
@@ -231,6 +338,32 @@ msgstr "Ação ao rolar o mouse sobre o ícone do applet."
 #. settings-schema.json->symbolicIcon->description
 msgid "Use symbolic icon"
 msgstr "Usar ícone simbólico"
+
+#. settings-schema.json->smoothTransition->description
+msgid "Smooth transition between day and night"
+msgstr "Transição suave entre dia e noite"
+
+#. settings-schema.json->transitionDuration->units
+msgid "Minutes"
+msgstr "Minutos"
+
+#. settings-schema.json->transitionDuration->description
+msgid "Transition Duration"
+msgstr "Duração da transição"
+
+#. settings-schema.json->dayTemp->units
+#. settings-schema.json->nightTemp->units
+msgid "K"
+msgstr "K"
+
+#. settings-schema.json->dayBrightness->units
+#. settings-schema.json->nightBrightness->units
+msgid "%"
+msgstr "%"
+
+#. settings-schema.json->manualNightTime->description
+msgid "Use Manual Night Time"
+msgstr "Usar o horário noturno manual"
 
 #. settings-schema.json->keyBrightnessUp->description
 msgid "Increase brightness level"
@@ -256,39 +389,14 @@ msgstr "Aumentar o nível de gama"
 msgid "Decrease gamma level"
 msgstr "Diminuir o nível de gama"
 
-#. settings-schema.json->dayTemp->units
-#. settings-schema.json->nightTemp->units
-msgid "K"
-msgstr "K"
+#. settings-schema.json->stepBright->tooltip
+#. settings-schema.json->stepGamma->tooltip
+msgid "Step when changing by shortcuts"
+msgstr "Passo ao alterar por atalhos"
 
-#. settings-schema.json->dayBrightness->units
-#. settings-schema.json->nightBrightness->units
-msgid "%"
-msgstr "%"
-
-#. settings-schema.json->smoothTransition->description
-msgid "Smooth transition between day and night"
-msgstr "Transição suave entre dia e noite"
-
-#. settings-schema.json->transitionDuration->units
-msgid "Minutes"
-msgstr "Minutos"
-
-#. settings-schema.json->transitionDuration->description
-msgid "Transition Duration"
-msgstr "Duração da transição"
-
-#. settings-schema.json->manualNightTime->description
-msgid "Use Manual Night Time"
-msgstr "Usar o horário noturno manual"
-
-#. settings-schema.json->nightTimeStart->description
-msgid "Choose Start Time"
-msgstr "Escolha a hora de início"
-
-#. settings-schema.json->nightTimeEnd->description
-msgid "Choose End Time"
-msgstr "Escolha o horário de término"
+#. settings-schema.json->stepTemp->tooltip
+msgid "Step when changing value by shortcuts"
+msgstr "Passos quando alterando valores por atalhos"
 
 #. settings-schema.json->locationRemote->description
 msgid "Remote Location"
@@ -304,6 +412,14 @@ msgstr ""
 msgid "Update Location"
 msgstr "Atualizar localização"
 
+#. settings-schema.json->locationCity->description
+msgid "City"
+msgstr "Cidade"
+
+#. settings-schema.json->locationCity->tooltip
+msgid "Current City"
+msgstr "Cidade atual"
+
 #. settings-schema.json->locationLatitude->description
 msgid "Latitude"
 msgstr "Latitude"
@@ -314,14 +430,12 @@ msgstr "Longitude"
 
 #. settings-schema.json->aboutLocation->description
 msgid ""
-"Native geoclue on redshift can make the experience slow.\n"
-"Using: https://geolocation-db.com/"
+"This location is approximate! If it is wrong or if you want a more precise "
+"calculation, enter it manually."
 msgstr ""
-"Localização remota nativa do Redshift pode tornar sua experiência lenta.\n"
-"Usando: https://geolocation-db.com/"
 
 #. settings-schema.json->textTips->description
-msgid "* Right-click the sliders to reset the default (neutral) value."
+msgid "Right-click the sliders to reset the default (neutral) value."
 msgstr ""
 "* Clique com o botão direito do mouse nos sliders para redefinir o valor "
 "padrão (neutro)."
@@ -339,9 +453,78 @@ msgstr ""
 
 #. settings-schema.json->textInfo->description
 msgid ""
-"If you like and use this applet take the time to visit it's page on Cinnamon "
-"Spices and give it a star. You only need a github account to do this."
+"If you like and use this applet take the time to visit it's page on Github "
+"and give it a star."
 msgstr ""
-"Se você gosta e usa este applet, visite o site dos Applets do Cinnamon e dê "
-"uma estrela para esse applet. Você só precisa de uma conta no GitHub para "
-"fazer isso."
+"Se você gosta e usa este applet, visite sua página no Github e dê uma "
+"estrela."
+
+#. settings-schema.json->btnOpenGithub->description
+msgid "QRedshift at GitHub"
+msgstr "QRedshift no GitHub"
+
+#. settings-schema.json->btnOpenGithubIssue->description
+msgid "Submit an Issue"
+msgstr "Reporte um Problema"
+
+#. settings-schema.json->autoCheckUpdate->description
+msgid "Automatically check for updates"
+msgstr "Verificar atualizações automaticamente"
+
+#. settings-schema.json->checkUpdateInterval->units
+msgid "minutes"
+msgstr "minutos"
+
+#. settings-schema.json->checkUpdateInterval->description
+msgid "Check update interval"
+msgstr "Intervalo de atualização"
+
+#. settings-schema.json->btnUpdate->description
+msgid "Check For Updates"
+msgstr "Verifique se há atualizações"
+
+#~ msgid "Check applet menu to update"
+#~ msgstr "Verifique o menu do applet para atualizar"
+
+#~ msgid "Unzipping..."
+#~ msgstr "Descompactando..."
+
+#~ msgid "REDSHIFT NOT INSTALLED!"
+#~ msgstr "REDSHIFT NÃO ESTÁ INSTALADO!"
+
+#~ msgid "Requires Redshift: sudo apt-get install redshift"
+#~ msgstr "É necessário instalar o Redshift: sudo apt-get install redshift"
+
+#~ msgid "should be removed."
+#~ msgstr "deve ser removido."
+
+#~ msgid "Settings"
+#~ msgstr "Configurações"
+
+#~ msgid "Adjustment Method"
+#~ msgstr "Método de ajuste"
+
+#~ msgid "needload"
+#~ msgstr "needload"
+
+#~ msgid "randr"
+#~ msgstr "randr"
+
+#~ msgid "vidmode"
+#~ msgstr "vidmode"
+
+#~ msgid "Method to use to set color temperature"
+#~ msgstr "Método usado para ajustar a temperatura da cor"
+
+#~ msgid "Choose Start Time"
+#~ msgstr "Escolha a hora de início"
+
+#~ msgid "Choose End Time"
+#~ msgstr "Escolha o horário de término"
+
+#~ msgid ""
+#~ "Native geoclue on redshift can make the experience slow.\n"
+#~ "Using: https://geolocation-db.com/"
+#~ msgstr ""
+#~ "Localização remota nativa do Redshift pode tornar sua experiência lenta.\n"
+#~ "Usando: https://geolocation-db.com/"
